Fixing studylist highlighting on IE11

--- a/LesionTracker/client/components/viewerSection/viewerSection.styl
+++ b/LesionTracker/client/components/viewerSection/viewerSection.styl
@@ -1,11 +1,11 @@
-@import "{ohif:design}/app"
+@require '{ohif:design}/app'
 
 .viewerSection
   display: flex
   flex: 1
   flex-flow: row nowrap
   align-items: stretch
-  height: 'calc(100% - %s)' % ($toolbarHeight + $topBarHeight)
+  height: 'calc(100vh - %s)' % ($toolbarHeight + $topBarHeight)
   width: 100%
 
   .sidebarMenu
@@ -38,11 +38,11 @@
 
   .mainContent
     flex: 1
-    order: 2
-    width: 100%
     height: 100%
+    order: 2
     overflow: hidden
     transition($sidebarTransition)
+    width: 100%
 
   .sidebar-right
     flex: 1
